refactor line counting logic; simplify control flow and improve readability in Method.java